fix: add margin: auto to table style to center align it

--- a/style.css
+++ b/style.css
@@ -1,36 +1,48 @@
-.content{
+.content {
     text-align: center;
-}
-body{
-    text-align: center;
-}
-p{
-    color:black;
-    background-color: aliceblue;   
-}
-ul{
-list-style: inside;
-background-color: aliceblue;
 }
 
-table, th, td{
+body {
+    text-align: center;
+}
+
+p {
+    color: black;
+    background-color: aliceblue;
+}
+
+ul {
+    list-style: inside;
+    background-color: aliceblue;
+}
+
+table,
+th,
+td {
     border: 1px solid;
     border-collapse: collapse;
     width: 30%;
     text-align: center;
-    
-    
+    margin: auto;
+
+
 }
-th, td{
+
+th,
+td {
     padding: 10px;
 }
-tr:nth-child(even) {background-color: #f2f2f2;}
 
-.footer{
-    text-align: center;
-    
+tr:nth-child(even) {
+    background-color: #f2f2f2;
 }
+
+.footer {
+    text-align: center;
+
+}
+
 img {
     padding: 1px;
     width: 150px;
-  }
+}
